ingress/nginx2.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-v2
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-v2
  replicas: 1
  template: 
    metadata:
      labels:
        app: nginx-v2
    spec:
      containers:
      - name: nginx-v2
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: html-file
            mountPath: /usr/share/nginx/html
      volumes:  
        - name: html-file 
          configMap:  
            name: nginx-index-v2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2
  namespace: default
  labels:
    app: nginx-v2
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-v2
