ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: dashboard
  namespace: default
spec:
  rules:
  - host: dashboard.example.com
    http:
      paths:
      - path: /v1
        backend:
          serviceName: nginx
          servicePort: http
      - path: /v2
        backend:
          serviceName: nginx-v2
          servicePort: http
  - host: note.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jupyter
          servicePort: http
